   
   o  Improvements and bug fixes to handling of plug-in menu installation.
   
   o  New function MacOSXP() to test for Mac OS X; used to suppress "Data -> New data set" menu, since the Mac data editor causes R to hang when called with an empty data frame (reported by Rob Goedman and Tracy Lightcap).
   
   o  When character values are entered in the data editor after "Data -> New data set", the corresponding variable is converted to a factor.
   
   o  When console.output is TRUE, messages as well as output now go to the R Console and the Commander Messages window (as well as the Output window) is suppressed (with code contributed by Richard Heiberger).
   
   o  Small changes.
   
Version 1.4-7
  
   o  Improved Brazilian Portuguese translation, contributed by Adriano Azevedo-Filho and Marilia Sa Carvalho.
   
   o  Added function sortVarNames(), which sorts variable names including numerals into a more "natural" order than does sort(); used in variable lists when the Rcmdr option "sort.names" is TRUE, which is the default.
   
   o  Small changes.
   
Version 1.4-8

   o  Export data set now allows an arbitrary field separator (suggested by Marilia Sa Carvalho).
   
   o  Menus can now use translation files supplied by plug-ins.
   
   o  Path names with apostrophes should no longer produce an "unbalanced parentheses" error.
   
   o  Added files for Debian Linux (from Pietro Battiston and Dirk Eddelbuettel).
	
   o  Small changes.
   
Version 1.4-9

   o  Upated Russian translation (courtesy of Alexey Shipunov).
   
   o  Fixed bug in BreuschPaganTest() that prevented dialog from functioning (reported by Michel Pouchain).
   
Version 1.4-10

   o  Corrected problem in paste in Command window in non-Windows systems (reported by Liviu Andronic).
   
   o  Fixed handling of X11 warnings which was disrupted by showData() (problem reported by Liviu Andronic).