@@ -798,4 +798,6 @@ Version 1.4-10
 
    o  Corrected problem in paste in Command window in non-Windows systems (reported by Liviu Andronic).
    
-   o  Fixed handling of X11 warnings which was disrupted by showData() (problem reported by Liviu Andronic).
+   o  Fixed handling of X11 warnings which was disrupted by showData(), and added check for "Warning in structure" (problems reported by Liviu Andronic).
+   
+   o  Prefixes used when output is directed to the R console are no longer hard-coded, but can be set by the "prefixes" Rcmdr option (to satisfy a request by Liviu Andronic).
